--- a/block/btn/style.scss
+++ b/block/btn/style.scss
@@ -19,23 +19,6 @@
   }
 }
 
-.smb-btn-wrapper.alignleft,
-.smb-btn-wrapper.alignright {
-  float: none;
-}
-
-.smb-btn-wrapper.alignleft {
-  > .smb-btn {
-    float: left;
-  }
-}
-
-.smb-btn-wrapper.alignright {
-  > .smb-btn {
-    float: right;
-  }
-}
-
 .smb-btn-wrapper.aligncenter {
   text-align: center;
 }
